"Nicolas R" found the problem during his tests for "Bug 37488 - PRINTING table borders in Writer not printed if there are also images in the document, DRAW object printed crippled" (with WIN7), and it's "[Reproducible] with "LibreOffice 3.4.1 - WIN7 Home Premium (64bit) German UI [OOO340m1 (Build:103)]". Steps to reproduce: 0. Start LibO from WIN start center 1. Open new WRITER document from LibO Start Center 2. Type "x" 3. <ctrl+a> to slect all 4. Menu 'Print' In "Range and copies" "Selection" is selected 5. In "Range and copies" click "Pages" New radio button as expected 6. Click "Range and copies - Selection" Expected: New radio button Actual: New radio button + CRASH Same crash result with a daily build based on Build:101 dated 2011-July-08 @Jeffrey: Can you please do an additional test with Linux? @Cédric: Please feel free to reassign if it’s not your area!
Forgot to mention: - PDF export is not affected - Also CRASH for "Pages -> Selection" - No problem with an obsolete LibO Portable version, so REGRESSION.
Created attachment 49011 [details] Valgrind log for this...
The bug already is in 3.4.0. It took many weeks to find it => less used scenario => can't be a blocker => lowering the severity a bit. Cedric has vacation these days. Kendy and Lubos are looking at it. It is not trivial but we will try to fix it for 3.4.2-rc2.
Tested with 3.4.2rc2 Windows XP: crash Tested with 3.4.2rc2 Linux X86-64 : same crash. So changing platform to: All / All.
We somewhere have a modification that in Future "print selection" no longer will be default if some text has been selected. Currently IMHO <http://cgit.freedesktop.org/libreoffice/writer/commit/?id=591dfe338ee2e553f822e8bbd3bc602a8ff0d875> only is in Master, but as soon as that will get into a branch we will run into serious problems. Modified Status due to facts.
calling ViewOptionAdjustStop destroys the current ViewShell
I can make the crash go away anyway. Though we have the usual nightmare of writers abundance of illdefined shells and views.
Created attachment 50091 [details] gdb log of where the viewshell gets deleted
restore the view options, options might affect selection, temp selection document thrown away, view associated with temp document thrown away, something of that nature.
After faffing around with a view possibilities, I've ended up with just http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd690d2e72be410058376c416a40ff5d918fb0f7 i.e. assume that for the selection case we are dealing with a temporary document, so we don't have to restore the settings on the view as its all going to go away anyway afterwards.
pushed to 3-4 now