Resolves: fdo#39159 don't restore original view settings on temp documents